--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>
-        Hello World
-    
+        Hello World!
     </h1>
+    <h3>
+        My Name Is Gavriel Rom
+    </h3>
+    <p>
+        This Is My HTML
+    </p>
 </body>
 </html>
